--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,24 @@ osx: &osx
 jobs:
    include:
 
-      - <<: *linux
+      - stage: default
+        <<: *linux
         env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=conanio/gcc49
 
-      - <<: *linux
+      - stage: default
+        <<: *linux
         env: CONAN_GCC_VERSIONS=5 CONAN_DOCKER_IMAGE=conanio/gcc5
 
-      - <<: *linux
+      - stage: default
+        <<: *linux
         env: CONAN_GCC_VERSIONS=6 CONAN_DOCKER_IMAGE=conanio/gcc6
 
-      - <<: *linux
+      - stage: default
+        <<: *linux
         env: CONAN_GCC_VERSIONS=7 CONAN_DOCKER_IMAGE=conanio/gcc7
 
-      - <<: *linux
+      - stage: default
+        <<: *linux
         env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/gcc8
 
       - stage: default
