--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,10 @@
 environment:
   PYTHON_HOME: "C:\\Python37"
+  CONAN_REFERENCE: "civete/1.13"
+  CONAN_USERNAME: "tarjei400"
+  CONAN_LOGIN_USERNAME: "tarjei400"
+  CONAN_CHANNEL: "stable"
+  CONAN_UPLOAD: "https://api.bintray.com/conan/tarjei400"
 
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
