Fixed conan reference name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 
 env:
    global:
-     - CONAN_REFERENCE: "civete/1.13"
+     - CONAN_REFERENCE: "civetweb/1.13"
      - CONAN_USERNAME: "tarjei400"
      - CONAN_LOGIN_USERNAME: "tarjei400"
      - CONAN_CHANNEL: "stable"
